# streamdeck-starcitizen

./: .gitignore  CHANGELOG.md  CLAUDE.md  COPYRIGHT  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Plugin-Spec.md  README.md  cliff.toml  release.toml
.claude/agents/: memory-investigator.md  streamdeck-reviewer.md
.claude/hooks/: clippy-check.sh  format-rust.sh
.claude/skills/new-action/: SKILL.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: roadmap.md  star-citizen-domain.md
docs/features/: admin-warning.md  audio-feedback.md  dial-action.md  game-log-telemetry.md  mouse-execution.md
icu.veelume.starcitizen.sdPlugin/: manifest.json  toggle-groups.toml
icu.veelume.starcitizen.sdPlugin/images/: README.md
icu.veelume.starcitizen.sdPlugin/pi/: README.md  example.html  execute-action.html  generate-binds.html  manage-version.html  settings.html  toggle-action.html
scripts/: build-plugin.ps1  find-toggle-groups.py  memory-pressure.ps1  release.ps1  setup.ps1  toggle-groups.txt
src/: abbreviations.rs  discovery.rs  icons.rs  labels.rs  lib.rs  main.rs  render.rs  styles.rs  topics.rs
src/actions/: example.rs  execute_action.rs  generate_binds.rs  manage_version.rs  mod.rs  settings.rs  shared.rs  toggle_action.rs
src/adapters/: binding_watcher.rs  mod.rs
src/bindings/: autofill.rs  executor.rs  generator_config.rs  mod.rs  model.rs  overlay.rs  p4k.rs  parser.rs  translations.rs
src/state/: bindings.rs  fonts.rs  icon_folder.rs  installations.rs  labels.rs  mod.rs  styles.rs  toggle_groups.rs
