[package]
name = "streamdeck-starcitizen"
version = "0.1.0"
edition = "2024"
authors = ["veelume"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "plugin"
path = "src/main.rs"

[dependencies]
anyhow       = "1"
constcat     = "0.6"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tracing      = "0.1"
streamdeck-lib = { git = "https://github.com/veelume/streamdeck-lib", tag = "v0.5.0" }
# streamdeck-render = { git = "https://github.com/veelume/streamdeck-render", tag = "v0.1.3" }

# ---------------------------------------------------------------------------
# Build profiles
# ---------------------------------------------------------------------------

# Optimised production build — smaller binary, better runtime performance.
[profile.release]
opt-level     = 3
lto           = "thin"    # link-time optimisation (fast compile, still very effective)
codegen-units = 1         # single codegen unit → better cross-function inlining
strip         = "symbols" # strip debug symbols → meaningfully smaller binary
