[package]
name = "streamdeck-starcitizen"
version = "0.1.1"
edition = "2024"
authors = ["veelume"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "plugin"
path = "src/main.rs"

[[bin]]
name = "extract-p4k"
path = "src/bin/extract_p4k.rs"

[dependencies]
anyhow           = "1"
arc-swap         = "1"
base64           = "0.22"
constcat         = "0.6"
crossbeam-channel = "0.5"
encoding_rs      = "0.8"
notify           = "8"
parking_lot      = "0.12"
roxmltree        = "0.20"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
tracing          = "0.1"
streamdeck-lib    = { git = "https://github.com/veelume/streamdeck-lib", tag = "v0.5.0" }
streamdeck-render = { git = "https://github.com/veelume/streamdeck-render", tag = "v0.1.3" }
svarog-p4k        = { git = "https://github.com/19h/svarog", tag = "v1.4.0" }
svarog-cryxml     = { git = "https://github.com/19h/svarog", tag = "v1.4.0" }

[dev-dependencies]
tempfile = "3"

# ---------------------------------------------------------------------------
# Build profiles
# ---------------------------------------------------------------------------

# Optimised production build — smaller binary, better runtime performance.
[profile.release]
opt-level     = 3
lto           = "thin"    # link-time optimisation (fast compile, still very effective)
codegen-units = 1         # single codegen unit → better cross-function inlining
strip         = "symbols" # strip debug symbols → meaningfully smaller binary
